# tiny-llm-edge-profiler

./: .bandit  .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .release.toml  .ruff.toml  AI_ML_GOVERNANCE.md  AI_ML_GOVERNANCE_ENHANCED.md  ARCHITECTURE.md  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_FINAL_REPORT.md  AUTONOMOUS_SDLC_IMPLEMENTATION_SUMMARY.md  AUTONOMOUS_SDLC_RESEARCH_COMPLETION_REPORT.md  BACKLOG.md  BREAKTHROUGH_RESEARCH_PAPER.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  COMPLIANCE.md  CONTRIBUTING.md  DEPENDENCY_DASHBOARD.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  Dockerfile  GENERATION4_QUANTUM_LEAP_IMPLEMENTATION_REPORT.md  GENERATION_2_ROBUSTNESS_IMPLEMENTATION_REPORT.md  GITHUB_WORKFLOWS_SETUP.md  MONITORING.md  Makefile  PERFORMANCE_OPTIMIZATION.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PROJECT_CHARTER.md  README.md  REPRODUCIBILITY_PACKAGE.md  SBOM_GENERATION.md  SDLC_ENHANCEMENT_SUMMARY.md  SECURITY.md  (+36 more)
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  setup.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  project-metrics.json
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml  hardware_support.md  performance_issue.md  platform_support.yml
.github/workflows/: autonomous-sdlc.yml  ci.yml  security.yml
.terragon/: autonomous_executor.py  config.yaml  discovery_engine.py  value-metrics.json
deployment/: Dockerfile.prod  docker-compose.prod.yml  production_config.yaml
deployment/config/: production.yaml
deployment/docker/: Dockerfile  docker-compose.yml
deployment/kubernetes/: deployment.yaml  self-healing-guard.yaml
deployment/monitoring/: prometheus.yml
deployment/scripts/: deploy.sh
docker/: 99-embedded-devices.rules  99-platformio-udev.rules  Dockerfile  docker-compose.yml  entrypoint-dev.sh
docker/self-healing-guard/: Dockerfile  entrypoint.sh  healthcheck.py
docs/: DEVELOPMENT.md  FINAL_IMPLEMENTATION_SUMMARY.md  ROADMAP.md  SETUP_COMPLETE.md  SETUP_REQUIRED.md
docs/adr/: 0001-architecture-decision-records.md  0002-python-as-primary-language.md  0003-modular-platform-architecture.md  001-platform-abstraction-strategy.md  template.md
docs/guides/: quick-start-guide.md
docs/monitoring/: README.md  alerting.md  health-checks.md
docs/runbooks/: incident-response.md  operational-procedures.md
docs/testing/: testing-strategy.md
docs/workflows/: BRANCH_PROTECTION_SETUP.md  CI_CD_ADVANCED.md  CONTAINER_SECURITY.md  README.md  SETUP_INSTRUCTIONS.md  WORKFLOW_SETUP_GUIDE.md  ci-comprehensive.yml
docs/workflows/examples/: cd.yml  dependency-update.yml  security-scan.yml
docs/workflows/github-actions-templates/: ci.yml
examples/: generation1_quickstart.py
scripts/: build.sh  generate_sbom.py  reproduce_experiments.py  security-scan.sh
scripts/automation/: collect_metrics.py  integration_scripts.py  performance_tracking.py  repository_health.py
src/tiny_llm_profiler/: __init__.py  adaptive_scaling_guard.py  advanced_cache.py  advanced_monitoring.py  advanced_reliability_guard.py  analyzer.py  async_pipeline.py  auto_scaling.py  autonomous_ai_optimizer.py  autonomous_sdlc_engine.py  benchmarking.py  benchmarks.py  breakthrough_research_algorithms.py  cache.py  cli.py  cli_lite.py  cli_quickstart.py  concurrent.py  concurrent_utils.py  config.py  core_lite.py  distributed_profiler.py  enhanced_reliability.py  enterprise_features.py  exceptions.py  experimental_validation.py  experimental_validation_engine.py  generation4_quantum_profiler.py  global_compliance_manager.py  global_deployment_manager.py  global_optimizer.py  health.py  health_monitor.py  i18n_manager.py  infrastructure_sentinel.py  intelligent_monitoring.py  logging_config.py  model_drift_detector.py  models.py  monitoring.py  (+30 more)
tests/: __init__.py  conftest.py  integration_test.py  pytest_markers.py  test_breakthrough_research_algorithms.py  test_core_functionality.py  test_lite_functionality.py  test_quantum_optimization.py  test_research_framework.py  test_self_healing_pipeline_guard.py
tests/fixtures/: test_data_factory.py
tests/hardware/: __init__.py  test_esp32_integration.py  test_hardware_real.py
tests/integration/: __init__.py  test_concurrent_profiling.py  test_edge_profiling_e2e.py  test_health_and_scaling.py  test_integration.py  test_platform_compatibility.py  test_platform_integration.py  test_resource_management.py  test_security_pipeline.py
tests/performance/: benchmarks.py  test_benchmarks.py  test_performance.py
tests/unit/: __init__.py  test_advanced_monitoring.py  test_analyzer.py  test_auto_scaling.py  test_benchmarks.py  test_example.py  test_optimizer.py  test_profiler.py  test_reliability.py  test_results.py  test_security.py  test_security_enhancements.py  test_validation.py
tests/utils/: test_helpers.py
workflows-to-add/: cd.yml  ci.yml  dependency-update.yml  security.yml
